2008-05-14	Till Straumann <strauman@slac.stanford.edu>

	* new-exceptions/bspsupport/irq.c: moved malloc/free
	outside of irq-protected critical section.

2008-04-24	Joel Sherrill <joel.sherrill@OARcorp.com>

	* mpc8260/console-generic/console-generic.c,
	mpc8xx/console-generic/console-generic.c: Remove all references to
	console_reserve_resources and termios_reserve_resources.

2008-04-24	Nigel Spon <nigel@adi.co.nz>

	* ppc403/console/console.c: Correct include path.

2008-04-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* mpc5xx/console-generic/console-generic.c, mpc5xx/include/console.h,
	mpc8260/console-generic/console-generic.c, mpc8260/include/console.h,
	mpc8xx/console-generic/console-generic.c, mpc8xx/include/console.h:
	Remove all references to console_reserve_resources and
	termios_reserve_resources.

2008-04-07	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* README: 
	removed reference to outdated "old-exception-handling" PPC support

2008-03-20	Till Straumann <strauman@slac.stanford.edu>

	* new-exceptions/bspsupport/irq.c: don't disable irqs
	at the interrupt controller (PIC) during initialization -- this
	caused problems where some BSPs's BSP_disable_irq_at_pic() routine
	did not ignore IRQ lines associated with cascaded PICs.
	Rely on the BSP (BSP_setup_the_pic()) to provide a good
	initial setup.

2008-03-13	Till Straumann <strauman@slac.stanford.edu>

	* new-exceptions/bspsupport/ppc_exc_asm_macros.h,
	new-exceptions/bspsupport/ppc_exc.S,
	new-exceptions/bspsupport/README,
	new-exceptions/bspsupport/ppc_exc_hdl.c:
	Thomas Doerfler clarified (thanks!) that raising an
	exception and executing the 1st instruction is not
	an atomical operation. I added a fix to the code that
	checks if a lower-priority interrupt is under way:
	we now not only test if the 'lock' variable was set
	but also check if the interrupted PC points to the
	'write lock' instruction.
	Added more comments and updated README.
